Fixed a recent new bug where codeblocks were not created on new tasks.  Fixed visibility of codeblock selector.

--- a/ui/admin/static/style/taskEdit.css
+++ b/ui/admin/static/style/taskEdit.css
@@ -17,6 +17,7 @@
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 20px; /* to accomodate the fixed footer */
+    bottom: 20px;
 
 }
 
